--- a/pages/sample-pages_tor/bake_01_user_dashboard.html
+++ b/pages/sample-pages_tor/bake_01_user_dashboard.html
@@ -76,12 +76,12 @@
             </a>
           </li>
           <li class="d-flex flex-column">
-            <a href="#tables" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
+            <a href="#tables1" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
               <p>ตัดผ้า
                 <i class="fa fa-sort-desc submenu-toggle"></i>
               </p>
             </a>
-            <div class="collapse" id="tables" role="navigation" aria-expanded="false" style="">
+            <div class="collapse" id="tables1" role="navigation" aria-expanded="false" style="">
               <ul class="nav flex-column ps-container ps-theme-default" data-ps-id="2b94cf34-2f02-ad93-3c9a-fec0a52844f9">
                 <li>
                   <a class="nav-link" href="cut_01.html">ค้นหาข้อมูล : รายการตัดผ้า</a>
@@ -105,12 +105,12 @@
             </div>
           </li>
           <li class="d-flex flex-column">
-            <a href="#tables" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
+            <a href="#tables2" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
               <p>ประกบผ้า
                 <i class="fa fa-sort-desc submenu-toggle"></i>
               </p>
             </a>
-            <div class="collapse" id="tables" role="navigation" aria-expanded="false" style="">
+            <div class="collapse" id="tables2" role="navigation" aria-expanded="false" style="">
               <ul class="nav flex-column ps-container ps-theme-default" data-ps-id="2b94cf34-2f02-ad93-3c9a-fec0a52844f9">
                 <li>
                   <a class="nav-link" href="layering_01.html">ค้นหาข้อมูล : รายการประกบสายพาน</a>
@@ -146,12 +146,12 @@
             </a>
           </li>
           <li class="d-flex flex-column active">
-            <a href="#tables" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
+            <a href="#tables3" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
               <p>อบ
                 <i class="fa fa-sort-desc submenu-toggle"></i>
               </p>
             </a>
-            <div class="collapse" id="tables" role="navigation" aria-expanded="false" style="">
+            <div class="collapse" id="tables3" role="navigation" aria-expanded="false" style="">
               <ul class="nav flex-column ps-container ps-theme-default" data-ps-id="2b94cf34-2f02-ad93-3c9a-fec0a52844f9">
                 <li class="active">
                   <a class="nav-link" href="bake_01_user_dashboard.html">หน้าหลักผู้ใช้ - แผนกอบสายพาน</a>
@@ -196,12 +196,12 @@
             </a>
           </li>
           <li class="d-flex flex-column">
-            <a href="#tables" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
+            <a href="#tables4" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
               <p>จัดส่ง
                 <i class="fa fa-sort-desc submenu-toggle"></i>
               </p>
             </a>
-            <div class="collapse" id="tables" role="navigation" aria-expanded="false" style="">
+            <div class="collapse" id="tables4" role="navigation" aria-expanded="false" style="">
               <ul class="nav flex-column ps-container ps-theme-default" data-ps-id="2b94cf34-2f02-ad93-3c9a-fec0a52844f9">
                 <li>
                   <a class="nav-link" href="delivery_01_search.html">วางแผนจัดส่งสินค้า</a>
