--- a/pages/sample-pages_tor/bake_02_setting.html
+++ b/pages/sample-pages_tor/bake_02_setting.html
@@ -228,6 +228,38 @@
               <p>คลังสินค้า</p>
             </a>
           </li>
+          <li class="d-flex flex-column">
+            <a href="#tables5" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
+              <p>ผสมยาง
+                <i class="fa fa-sort-desc submenu-toggle"></i>
+              </p>
+            </a>
+            <div class="collapse" id="tables5" role="navigation" aria-expanded="false" style="">
+              <ul class="nav flex-column ps-container ps-theme-default" data-ps-id="2b94cf34-2f02-ad93-3c9a-fec0a52844f9">
+                <li>
+                  <a class="nav-link" href="mix_01_user_dashboard.html">หน้าหลักผู้ใช้-แผนกผสมยาง</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="mix_02_data_entry.html">บันทึกงานผสมยาง</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="mix_03_search.html">ค้นหาข้อมูลผสมยาง</a>
+                </li>
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                </div>
+              </ul>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
