--- a/pages/sample-pages_tor/bake_04_data-entry.html
+++ b/pages/sample-pages_tor/bake_04_data-entry.html
@@ -740,12 +740,12 @@
                           </div>
                         </div>
                         <div class="col-md-4">
-                          <label>ตีตรา</label>
-                          <div class="input-group  border-1">
-                            <div class="form-check mx-auto py-2">
-                              <input type="checkbox" id="exampleCheck1" value="on" class="form-check-input">
-                              <label class="form-check-label" for="exampleCheck1">ตีตรา MUI</label>
-                            </div>
+                          <div class="form-group mb-0">
+                            <label for="firstName">ตีตรา</label>
+                          </div>
+                          <div class="form-check border-1 p-2">
+                            <input type="checkbox" id="exampleCheck1" value="on">
+                            <label class="form-check-label" for="exampleCheck1">ตีตรา MUI</label>
                           </div>
                         </div>
                       </div>
