--- a/pages/sample-pages_tor/bake_05_search.html
+++ b/pages/sample-pages_tor/bake_05_search.html
@@ -541,7 +541,7 @@
                             <th>เลขที่แจ้งผลิต</th>
                             <th>รายละเอียดสายพาน</th>
                             <th>ลูกค้า</th>
-                            <th>ผลิตเมือ</th>
+                            <th>ผลิตเมื่อ</th>
                             <th>การกระทำ</th>
                           </tr>
                         </thead>
