--- a/pages/sample-pages_tor/Glue_Coating.html
+++ b/pages/sample-pages_tor/Glue_Coating.html
@@ -437,7 +437,7 @@
                         <div class="row">
                           <div class="col-md-3">
                             <div class="form-group px-2">
-                              <label> สเปคผ้าที่ใช่้ </label>
+                              <label> สเปคผ้าที่ใช้ </label>
                               <div class="">
                                 <select class="form-control">
                                   <option>EP 100</option>
