--- a/pages/sample-pages_tor/sale_02_prod_order.html
+++ b/pages/sample-pages_tor/sale_02_prod_order.html
@@ -548,7 +548,7 @@
                         </div>
                       </div>
                       <div class="col-md-3">
-                        <div class="form-group">
+                        <div class="form-group mb-0">
                           <label for="firstName">ตีตรา</label>
                         </div>
                         <div class="form-check border-1 p-2">
