--- a/pages/sample-pages_tor/sale_04_search.html
+++ b/pages/sample-pages_tor/sale_04_search.html
@@ -546,7 +546,7 @@
                             <th>เลขที่แจ้งผลิต</th>
                             <th>รายละเอียด</th>
                             <th>ลูกค้า</th>
-                            <th>ผลิตเมือ</th>
+                            <th>ผลิตเมื่อ</th>
                             <th>การกระทำ</th>
                           </tr>
                         </thead>
