--- a/pages/sample-pages_tor/QC_report.html
+++ b/pages/sample-pages_tor/QC_report.html
@@ -578,7 +578,7 @@
                 <div class="card-body p-2">
                   <div class="row">
                     <div class="col-md-6">
-                      <p class="lead">ผลการค้นหา</p>
+                      <p class="lead">รายงาน QC</p>
                     </div>
                     <div class="col-md-6 text-right"> </div>
                   </div>
