--- a/pages/sample-pages_tor/sale_03_cut_order.html
+++ b/pages/sample-pages_tor/sale_03_cut_order.html
@@ -259,10 +259,33 @@
             </div>
           </li>
           <li class="d-flex flex-column">
-            <a href="splicing_02.html">
-              <i class="nav-icon"></i>
-              <p>ต่อหัว</p>
+            <a href="#tables12" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
+              <p>ต่อหัว
+                <i class="fa fa-sort-desc submenu-toggle"></i>
+              </p>
             </a>
+            <div class="collapse" id="tables12" role="navigation" aria-expanded="false" style="">
+              <ul class="nav flex-column ps-container ps-theme-default" data-ps-id="2b94cf34-2f02-ad93-3c9a-fec0a52844f9">
+                <li>
+                  <a class="nav-link" href="splicing_02.html">ต่อหัว</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="splicing_report.html">ประวัติการต่อหัว</a>
+                </li>
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 3px;">
+                  <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                </div>
+                <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                  <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                </div>
+              </ul>
+            </div>
           </li>
           <li class="d-flex flex-column">
             <a href="#tables4" aria-expanded="false" class="nav-link collapsed" data-toggle="collapse">
